<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <CheckBox
            android:id="@+id/answer_1"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textSize="16sp" />

        <LinearLayout
            style="@style/MarginFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextSize"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/question_2"
                android:textColor="#000" />

            <EditText
                android:id="@+id/answer_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:inputType="textCapSentences"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            style="@style/TextFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <RadioGroup
            android:id="@+id/question_3"
            style="@style/MarginFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/op1_question3"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_true" />

            <RadioButton
                android:id="@+id/op2_question3"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_false" />
        </RadioGroup>

        <TextView
            style="@style/TextFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question_4" />

        <RadioGroup
            android:id="@+id/question_4"
            style="@style/MarginFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/op1_question4"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_op1" />

            <RadioButton
                android:id="@+id/op2_question4"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_op2" />

            <RadioButton
                android:id="@+id/op3_question4"
                style="@style/RadioButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_op3" />
        </RadioGroup>

        <LinearLayout
            style="@style/MarginFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:contentDescription="@string/mars_description"
                android:scaleType="centerCrop"
                android:src="@drawable/mars" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <EditText
                    android:id="@+id/answer_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:hint="@string/question_5"
                    android:inputType="textCapSentences"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/score_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="getScore"
                    android:text="@string/score" />

                <Button
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:onClick="shareIntent"
                    android:text="@string/share" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
